--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -51,4 +51,4 @@ jobs:
       - name: use pytest to test
         run: |
           pip install pytest
-          pytest
+          pytest test/rayechen
