--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -52,4 +52,4 @@ jobs:
       - name: use pytest to test
         run: |
           pip install pytest
-          pytest test/rayechen
+          pytest rayechen
