--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -33,17 +33,19 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world! > pwd_one_line.txt
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          echo $(pwd) > pwd_just_example.txt
           echo Add other actions to build,
           echo test, and deploy your project.
           
       # 拉取测试代码
       - name: pull test code from github
         run: |
+          echo $(pwd) > pwd_pull.txt
           touch pull1_cwd
           cd ..
           touch pull2_cwd
@@ -53,6 +55,7 @@ jobs:
       # pytest测试
       - name: use pytest to test
         run: |
+          echo $(pwd) > pwd_pytest.txt
           pip install pytest
           touch pytest1_cwd
           cd ..
