--- a/.github/workflows/ppl_test.yml
+++ b/.github/workflows/ppl_test.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 # CI名称
-name: CI
+name: PPL_TEST
 
 # Controls when the action will run. 
 on:
