--- a/.github/workflows/ppl_test.yml
+++ b/.github/workflows/ppl_test.yml
@@ -29,13 +29,25 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Copy ppl_test.py
+      - name: Prepare Test Env
         run: |
           cp ../../ppltest.py ./
-          
-      # pytest测试
-      - name: use pytest to test
-        run: |
           pip install pytest
-          pytest test_example.py::test_ppl
+          
+      # ppl build
+      - name: ppl build
+        run: |
+          pytest test_example.py::build_ppl
+          
+      # ppl x86 test
+      - name: ppl x86 test
+        run: |
+          pytest test_example.py::test_ppl_x86
+          
+      # ppl cuda test
+      - name: ppl cuda test
+        run: |
+          pytest test_example.py::test_ppl_cuda
+          
+          
           
