--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set my pets name
-        run: echo '::set-output name=DogName::erhei,name=CatName::tommy'
+        run: |
+            echo '::set-output name=DogName::erhei'
+            echo '::set-output name=CatName::tommy'
         id: set-my-pets-name
       - name: Get my dog name
         run: echo "My dog name is ${{steps.set-my-pets-name.outputs.DogName}}. My cat name is ${{steps.set-my-pets-name.outputs.CatName}}."
