--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,6 @@
 name: Test Actions Objects
-on: push
+on: [push, workflow_dispatch]
+# Allows you to run this workflow manually from the Actions tab
 jobs:
   job_one:
     needs: job_output-test
