--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,7 +111,8 @@ jobs:
     steps:
       - name: pass env to func
         run: |
-          pip install pytest
+          #pip install pytest
+          echo $(pwd)
           python run_test.py --github_run_id $GITHUB_RUN_ID --github_run_number $GITHUB_RUN_NUMBER --sha $GITHUB_SHA
           #python test_example.py
       
