--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,6 +109,7 @@ jobs:
     name: run a func test
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: pass env to func
         run: |
           #pip install pytest
