--- a/.github/workflows/ppl_x86_quick_test.yml
+++ b/.github/workflows/ppl_x86_quick_test.yml
@@ -21,10 +21,14 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Create Check out directory
+        run: |
+          mkdir $GITHUB_RUN_ID
+          
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          path: ${{ GITHUB_RUN_ID }}
+          path: $GITHUB_RUN_ID
       
       # Runs a set of commands using the runners shell
       #- name: Build
