--- a/.github/workflows/ppl_x86_quick_test.yml
+++ b/.github/workflows/ppl_x86_quick_test.yml
@@ -24,12 +24,8 @@ jobs:
       - name: Create Check out directory
         run: |
           echo "GITHUB_RUN_ID: $GITHUB_RUN_ID."
-          echo $(pwd)
-          echo "cur dir: $(ls)"
-          mkdir test123
-          echo "cur dir: $(ls)"
+          echo "cur dir is: $(pwd)"
           mkdir $GITHUB_RUN_ID
-          echo "cur dir: $(ls)"
           
       #- name: Checkout
       #  uses: actions/checkout@v2
