--- a/.github/workflows/ppl_x86_quick_test.yml
+++ b/.github/workflows/ppl_x86_quick_test.yml
@@ -27,10 +27,10 @@ jobs:
           echo "cur dir is: $(pwd)"
           mkdir $GITHUB_RUN_ID
           
-      #- name: Checkout
-      #  uses: actions/checkout@v2
-        #with:
-        #  path: $GITHUB_RUN_ID
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: test123
       
       # Runs a set of commands using the runners shell
       #- name: Build
